Fix scrolling to in-page link on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,3 +30,11 @@ a {
 li {
   list-style: none;
 }
+
+/* Mobile */
+@media (max-width: 700px) {
+  html,
+  body {
+    scroll-padding-top: 15vh;
+  }
+}
